# synthhive

./: .env.example  CLAUDE.md  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
.claude/: launch.json
.github/workflows/: deploy.yml
bot/: client.py  router.py
bot/components/: accrual.py  dynamic.py  lizardbullets.py  management.py
bot/management/commands/: runbot.py
bot/skills/: __init__.py  campaigns.py  conch.py  counter.py  flask.py  followcheck.py  give.py  lizardroulette.py  markov.py  quotes.py  spoons.py  wallet.py
botbesties/: settings.py  urls.py
core/: admin.py  api.py  auth_urls.py  auth_views.py  models.py  synthfunc.py  twitch.py
core/management/commands/: exportquotes.py  importcommands.py  importmoobot.py  prunedeepbot.py  seed.py
core/migrations/: 0001_initial.py  0002_rename_codedcommand_to_skill.py  0003_allow_null_encrypted_tokens.py  0006_skillstat.py
core/templates/core/: setup.html
synthhive/: asgi.py  settings.py  wsgi.py
tests/: conftest.py  test_exportquotes.py  test_give.py  test_importmoobot.py  test_markov.py  test_migration.py  test_models.py  test_prunedeepbot.py  test_quotes.py  test_router.py  test_skills.py  test_spoons.py  test_twitch.py  test_variables.py  test_wallet.py
